Merged changes suggested by Martijn Rutte (https://github.com/MartijnRutte/flyway/tree/feature/db2z): - Improved info logging for calling stored procedures and cleanup - Support disabling archiving upon cleanup